# addfips

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
addfips/: __init__.py  addfips.py  cli.py
addfips/data/: counties_2000.csv  counties_2010.csv  counties_2015.csv  states.csv
src/addfips/: __init__.py  __main__.py  addfips.py
src/addfips/data/: counties_2015.csv  counties_2020.csv  states.csv
tests/: __init__.py  base.py  test_base.py  test_cli.py
