# -*- coding: utf-8 -*-
# This file is part of addfips.
# http://github.com/fitnr/addfips
# Licensed under the GPL-v3.0 license:
# http://opensource.org/licenses/GPL-3.0
# Copyright (c) 2016-22, Neil Freeman <contact@fakeisthenewreal.org>
[metadata]
name = addfips
version = attr: addfips.__version__
description = Add county FIPS to tabular data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = csv, census, usa
author = Neil Freeman
author_email = contact@fakeisthenewreal.org
url = https://github.com/fitnr/addfips
license = GPL-3.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
zip_safe = True
python_requires = >3.6.0
packages = find:
include_package_data = True
package_dir =
    =src

[options.package_data]
* = *.csv

[options.extras_require]
tests =
	coverage

[options.entry_points]
console_scripts =
    addfips=addfips.__main__:main

[options.packages.find]
where = src
